--- a/statistics.html
+++ b/statistics.html
@@ -20,7 +20,6 @@
         <h2 class="fs-5">إحصائية المهام</h2>
       </div>
 
-      <!-- نموذج البحث -->
       <div class="search-form mt-4">
         <h3 class="fs-6">خاصية البحث والإحصائية</h3>
         <p class="fs-6">
@@ -60,7 +59,6 @@
         </form>
       </div>
 
-      <!-- جدول النتائج -->
       <div class="table-container mt-4">
         <table class="table table-bordered table-striped">
           <thead class="table-dark">
@@ -76,22 +74,21 @@
         </table>
       </div>
 
-      <!-- زر الطباعة -->
       <button class="btn btn-primary print-btn mt-3" onclick="window.print()">
         طباعة
       </button>
 
-      <!-- روابط التنقل -->
       <div class="text-center mt-3 navigation-buttons">
         <a href="index.html" class="btn btn-secondary btn-sm"
           >الجدول الأول والثاني</a
         >
         <a href="second.html" class="btn btn-secondary btn-sm">الجدول الثالث</a>
-        <a href="move_tasks.html" class="btn btn-info btn-sm">نقل المهام</a>
+        <a href="pending_tasks.html" class="btn btn-warning btn-sm"
+          >المهام المؤجلة</a
+        >
       </div>
     </div>
 
-    <!-- Bootstrap و JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
