--- a/second.html
+++ b/second.html
@@ -8,26 +8,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <style>
-      .mission-info {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-      .mission-info h3 {
-        font-weight: bold;
-      }
-      .signature {
-        text-align: left;
-        margin-bottom: 10px;
-        font-size: 18px;
-        font-weight: bold;
-      }
-    </style>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <div class="text-center mt-3">
-        <!-- التبليغ والتوقيع -->
         <div class="mission-info">
           <h3>(تبليغ مباشرة مهمة)</h3>
           <ul class="list-unstyled">
@@ -41,15 +30,14 @@
             <li>رقيب الحركة والآليات</li>
           </ul>
           <div class="signature text-end">السلام عليكم ورحمة الله وبركاته</div>
-
           <h3 style="text-decoration: underline">عن المهمة التالية</h3>
         </div>
 
-        <!-- الجدول -->
         <h2 class="fs-5">الجدول الثالث</h2>
         <div class="table-responsive mt-4">
           <table
             class="table table-bordered table-striped text-center align-middle"
+            id="secondTable"
           >
             <thead class="table-dark">
               <tr>
@@ -66,29 +54,42 @@
                 <td>9:00 ص</td>
                 <td>دورية</td>
                 <td>المنطقة أ</td>
-                <td>
-                  <button class="btn btn-warning btn-sm">تعديل</button>
+                <td class="action-buttons">
+                  <button
+                    class="btn btn-warning btn-sm edit-btn"
+                    onclick="editRow(this)"
+                  >
+                    تعديل
+                  </button>
+                  <button
+                    class="btn btn-success btn-sm complete-btn"
+                    onclick="completeTask(this)"
+                  >
+                    اكتمال
+                  </button>
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
-
         <div class="mt-3">
+          <button
+            class="btn btn-success btn-sm"
+            onclick="addNewRow('secondTable')"
+          >
+            إضافة صف
+          </button>
           <a href="index.html" class="btn btn-primary btn-sm"
             >عودة للجدول الرئيسي</a
           >
         </div>
       </div>
+      <div class="signature text-end" style="margin-right: 20px">
+        <p>قائد قوة المهام والواجبات الخاصة</p>
+        <p>عقيد / فيصل بن خالد النفيسه</p>
+      </div>
     </div>
-
-    <div class="signature text-end" style="margin-right: 20px">
-      <p>قائد قوة المهام والواجبات الخاصة</p>
-      <p>عقيد /</p>
-      <p>فيصل بن خالد النفيسه</p>
-    </div>
-
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
