--- a/pending_tasks.html
+++ b/pending_tasks.html
@@ -46,6 +46,7 @@
         padding: 8px;
       }
       .time-input,
+      .time-select,
       .hijri-select {
         width: 80px;
         margin: 0 2px;
@@ -57,16 +58,46 @@
         gap: 5px;
         flex-wrap: wrap;
       }
-      .edit-btn {
+      .edit-btn,
+      .important-btn {
         margin: 2px;
         padding: 4px 8px;
         font-size: 12px;
         white-space: nowrap;
       }
+      .site-start-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 5px;
+      }
+      .site-start-container label {
+        font-size: 12px;
+        margin: 0;
+      }
+      .site-start-container input[type="time"],
+      .site-start-container input[type="text"] {
+        padding: 2px;
+        border: 1px solid #ced4da;
+        border-radius: 4px;
+        font-size: 12px;
+      }
+      .site-start-container input[type="text"] {
+        width: 120px;
+      }
+      .table-danger {
+        background-color: #f8d7da !important;
+      }
+      @media print {
+        .action-buttons,
+        button {
+          display: none;
+        }
+      }
       @media (max-width: 430px) {
         .table {
           font-size: 9px;
-          min-width: 600px; /* للسماح بالتمرير الأفقي */
+          min-width: 600px;
         }
         .table-responsive {
           overflow-x: auto;
@@ -75,16 +106,18 @@
           padding: 5px;
         }
         .time-input,
+        .time-select,
         .hijri-select {
           width: 50px;
           font-size: 9px;
         }
         .action-buttons {
-          flex-direction: column; /* الأزرار في عمود رأسي */
+          flex-direction: column;
           gap: 2px;
           justify-content: center;
         }
-        .edit-btn {
+        .edit-btn,
+        .important-btn {
           padding: 2px 4px;
           font-size: 9px;
           min-width: 50px;
@@ -94,8 +127,11 @@
           padding: 3px;
         }
         .table td {
-          white-space: normal; /* للسماح بتكسير النص */
+          white-space: normal;
           line-height: 1.2;
+        }
+        .site-start-container input[type="text"] {
+          width: 80px;
         }
       }
     </style>
@@ -111,7 +147,6 @@
           <thead class="table-dark">
             <tr>
               <th>اليوم والتاريخ</th>
-              <th>الاستعداد والبداية</th>
               <th>المباشرة بالموقع</th>
               <th>نوع المهمة</th>
               <th>الموقع</th>
@@ -148,6 +183,14 @@
         "ذو الحجة",
       ];
 
+      const timeOptions = Array.from({ length: 48 }, (_, i) => {
+        const hours = Math.floor(i / 2)
+          .toString()
+          .padStart(2, "0");
+        const minutes = i % 2 === 0 ? "00" : "30";
+        return `${hours}:${minutes}`;
+      });
+
       function loadPendingTasks() {
         const table = document
           .getElementById("pendingTable")
@@ -157,70 +200,85 @@
         );
         table.innerHTML = "";
         pendingTasks.forEach((task, index) => {
-          const [day, monthName, year] = task[0].split(" ");
+          const [weekDay, day, monthName, year] = task[0].split(" ");
           const month = hijriMonths.indexOf(monthName) + 1;
-          const [
-            startLabel,
-            startTime,
-            _,
-            taskStartLabel,
-            taskStartTime,
-            __,
-            taskEndTime,
-          ] = task[1].split(" ");
-          const [siteLabel, siteStartTime] = task[2].split(" ").slice(-2);
+          const [siteStartTime, siteStartText] = task[1]
+            .split(" | ")
+            .map((part) => part.replace("المباشرة بالموقع: ", ""));
+          const taskType = task[2];
+          const isImportant = task[7] || false;
           const row = table.insertRow();
+          if (isImportant) row.classList.add("table-danger");
           row.innerHTML = `
-                    <td class="date-cell">
-                        <select class="hijri-select" name="hijri-day">
-                            ${Array.from({ length: 30 }, (_, i) => i + 1)
-                              .map(
-                                (d) =>
-                                  `<option value="${d}" ${
-                                    d === parseInt(day) ? "selected" : ""
-                                  }>${d}</option>`
-                              )
-                              .join("")}
-                        </select>
-                        <select class="hijri-select" name="hijri-month">
-                            ${hijriMonths
-                              .map(
-                                (m, i) =>
-                                  `<option value="${i + 1}" ${
-                                    i + 1 === parseInt(month) ? "selected" : ""
-                                  }>${m}</option>`
-                              )
-                              .join("")}
-                        </select>
-                        <select class="hijri-select" name="hijri-year">
-                            ${Array.from({ length: 41 }, (_, i) => 1430 + i)
-                              .map(
-                                (y) =>
-                                  `<option value="${y}" ${
-                                    y === parseInt(year) ? "selected" : ""
-                                  }>${y}</option>`
-                              )
-                              .join("")}
-                        </select>
-                    </td>
-                    <td>
-                        بداية الانطلاق: <input type="time" class="time-input" name="start-time" value="${startTime}">
-                        <br>
-                        من الساعة <input type="time" class="time-input" name="task-start-time" value="${taskStartTime}"> إلى 
-                        <input type="time" class="time-input" name="task-end-time" value="${taskEndTime}">
-                    </td>
-                    <td>
-                        المباشرة بالموقع: <input type="time" class="time-input" name="site-start-time" value="${siteStartTime}">
-                    </td>
-                    <td contenteditable="false">${task[3]}</td>
-                    <td contenteditable="false">${task[4]}</td>
-                    <td contenteditable="false">${task[5]}</td>
-                    <td class="button-cell">
-                        <div class="action-buttons">
-                            <button class="btn btn-warning btn-sm edit-btn" onclick="editPendingRow(${index})">تعديل</button>
-                        </div>
-                    </td>
-                `;
+            <td class="date-cell">
+              <select class="hijri-select" name="week-day">
+                ${[
+                  "السبت",
+                  "الأحد",
+                  "الإثنين",
+                  "الثلاثاء",
+                  "الأربعاء",
+                  "الخميس",
+                  "الجمعة",
+                ]
+                  .map(
+                    (d) =>
+                      `<option value="${d}" ${
+                        d === weekDay ? "selected" : ""
+                      }>${d}</option>`
+                  )
+                  .join("")}
+              </select>
+              <select class="hijri-select" name="hijri-day">
+                ${Array.from({ length: 30 }, (_, i) => i + 1)
+                  .map(
+                    (d) =>
+                      `<option value="${d}" ${
+                        d === parseInt(day) ? "selected" : ""
+                      }>${d}</option>`
+                  )
+                  .join("")}
+              </select>
+              <select class="hijri-select" name="hijri-month">
+                ${hijriMonths
+                  .map(
+                    (m, i) =>
+                      `<option value="${i + 1}" ${
+                        i + 1 === parseInt(month) ? "selected" : ""
+                      }>${m}</option>`
+                  )
+                  .join("")}
+              </select>
+              <select class="hijri-select" name="hijri-year">
+                ${Array.from({ length: 41 }, (_, i) => 1430 + i)
+                  .map(
+                    (y) =>
+                      `<option value="${y}" ${
+                        y === parseInt(year) ? "selected" : ""
+                      }>${y}</option>`
+                  )
+                  .join("")}
+              </select>
+            </td>
+            <td>
+              <div class="site-start-container">
+                <label>المباشرة بالموقع:</label>
+                <input type="time" class="time-input" name="site-start-time" value="${siteStartTime}">
+                <input type="text" name="site-start-text" value="${siteStartText}" placeholder="نص مفتوح">
+              </div>
+            </td>
+            <td contenteditable="false">${taskType}</td>
+            <td contenteditable="false">${task[3]}</td>
+            <td contenteditable="false">${task[4]}</td>
+            <td class="button-cell">
+              <div class="action-buttons">
+                <button class="btn btn-warning btn-sm edit-btn" onclick="editPendingRow(${index})">تعديل</button>
+                <button class="btn btn-danger btn-sm important-btn" onclick="toggleImportant(${index})">${
+            isImportant ? "إلغاء الأهمية" : "تحديد كمهمة"
+          }</button>
+              </div>
+            </td>
+          `;
         });
       }
 
@@ -230,9 +288,9 @@
           .getElementsByTagName("tbody")[0];
         const row = table.rows[index];
         const cells = row.getElementsByTagName("td");
-        cells[3].contentEditable = "true";
-        cells[4].contentEditable = "true";
-        cells[5].contentEditable = "true";
+        cells[2].contentEditable = "true"; // نوع المهمة
+        cells[3].contentEditable = "true"; // الموقع
+        cells[4].contentEditable = "true"; // المطلوب
         const editButton = row.querySelector(".edit-btn");
         editButton.innerText = "حفظ";
         editButton.className = "btn btn-success btn-sm edit-btn";
@@ -247,45 +305,61 @@
           .getElementsByTagName("tbody")[0];
         const row = table.rows[index];
         const cells = row.getElementsByTagName("td");
+        const weekDay = cells[0].querySelector("select[name='week-day']").value;
         const day = cells[0].querySelector("select[name='hijri-day']").value;
         const month = cells[0].querySelector(
           "select[name='hijri-month']"
         ).value;
         const year = cells[0].querySelector("select[name='hijri-year']").value;
-        const startTime = cells[1].querySelector(
-          "input[name='start-time']"
-        ).value;
-        const taskStartTime = cells[1].querySelector(
-          "input[name='task-start-time']"
-        ).value;
-        const taskEndTime = cells[1].querySelector(
-          "input[name='task-end-time']"
-        ).value;
-        const siteStartTime = cells[2].querySelector(
+        const siteStartTime = cells[1].querySelector(
           "input[name='site-start-time']"
         ).value;
+        const siteStartText = cells[1].querySelector(
+          "input[name='site-start-text']"
+        ).value;
+        const taskType = cells[2].innerText; // نوع المهمة
         const pendingTasks = JSON.parse(
           localStorage.getItem("pending_tasks") || "[]"
         );
         pendingTasks[index] = [
-          `${day} ${hijriMonths[month - 1]} ${year}`,
-          `بداية الانطلاق: ${startTime} | من الساعة ${taskStartTime} إلى ${taskEndTime}`,
-          `المباشرة بالموقع: ${siteStartTime}`,
+          `${weekDay} ${day} ${hijriMonths[month - 1]} ${year}`,
+          `المباشرة بالموقع: ${siteStartTime} | ${siteStartText}`,
+          taskType,
           cells[3].innerText,
           cells[4].innerText,
-          cells[5].innerText,
           false,
+          false,
+          pendingTasks[index][7] || false, // الحفاظ على حالة الأهمية
         ];
         localStorage.setItem("pending_tasks", JSON.stringify(pendingTasks));
+        cells[2].contentEditable = "false";
         cells[3].contentEditable = "false";
         cells[4].contentEditable = "false";
-        cells[5].contentEditable = "false";
         const editButton = row.querySelector(".edit-btn");
         editButton.innerText = "تعديل";
         editButton.className = "btn btn-warning btn-sm edit-btn";
         editButton.onclick = function () {
           editPendingRow(index);
         };
+      }
+
+      function toggleImportant(index) {
+        const table = document
+          .getElementById("pendingTable")
+          .getElementsByTagName("tbody")[0];
+        const row = table.rows[index];
+        const pendingTasks = JSON.parse(
+          localStorage.getItem("pending_tasks") || "[]"
+        );
+        pendingTasks[index][7] = !pendingTasks[index][7]; // تبديل حالة الأهمية
+        localStorage.setItem("pending_tasks", JSON.stringify(pendingTasks));
+        if (pendingTasks[index][7]) {
+          row.classList.add("table-danger");
+          row.querySelector(".important-btn").innerText = "إلغاء الأهمية";
+        } else {
+          row.classList.remove("table-danger");
+          row.querySelector(".important-btn").innerText = "تحديد كمهمة";
+        }
       }
 
       document.addEventListener("DOMContentLoaded", function () {
