--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
     <style>
-      /* الـ CSS كما هو مع تعديل بسيط للألوان */
       html,
       body {
         height: 100%;
@@ -61,6 +60,48 @@
         vertical-align: middle;
         padding: 8px;
       }
+      /* تعديل عرض الأعمدة */
+      .table th:nth-child(1),
+      .table td:nth-child(1) {
+        /* التسلسل */
+        width: 5%;
+      }
+      .table th:nth-child(2),
+      .table td:nth-child(2) {
+        /* اليوم والتاريخ */
+        width: 15%;
+      }
+      .table th:nth-child(3),
+      .table td:nth-child(3) {
+        /* المباشرة بالموقع */
+        width: 10%;
+      }
+      .table th:nth-child(4),
+      .table td:nth-child(4) {
+        /* نوع المهمة */
+        width: 25%;
+      }
+      .table th:nth-child(5),
+      .table td:nth-child(5) {
+        /* الموقع */
+        width: 15%;
+      }
+      .table th:nth-child(6),
+      .table td:nth-child(6) {
+        /* المطلوب */
+        width: 25%;
+      }
+      .table th:nth-child(7),
+      .table td:nth-child(7) {
+        /* تعديل */
+        width: 5%;
+      }
+      /* تقليص عرض عناصر select في عمود اليوم والتاريخ */
+      .hijri-select {
+        width: 50px !important;
+        font-size: 10px;
+        padding: 2px;
+      }
       .action-buttons {
         display: flex;
         justify-content: center;
@@ -77,10 +118,6 @@
         font-size: 12px;
         white-space: nowrap;
       }
-      .completed-task {
-        text-decoration: line-through !important;
-      }
-      /* الألوان الداكنة للمهام المهمة فقط (مش للاكتمال) */
       .important-task-dark-red {
         background-color: #ff9999 !important;
       }
@@ -141,7 +178,6 @@
       .time-input,
       .hijri-select,
       .color-select {
-        width: 80px;
         margin: 0 2px;
         display: inline-block;
       }
@@ -149,6 +185,10 @@
         display: flex;
         gap: 5px;
         justify-content: center;
+      }
+      /* إخفاء النص المخصص للطباعة في العرض العادي */
+      .print-date {
+        display: none;
       }
       @media print {
         .date-controls,
@@ -160,8 +200,49 @@
         a.btn {
           display: none !important;
         }
-        .container * {
-          color: #000 !important;
+        /* إجبار ظهور الألوان الخلفية */
+        * {
+          -webkit-print-color-adjust: exact !important;
+          print-color-adjust: exact !important;
+        }
+        /* إخفاء القوائم المنسدلة في أعمدة التاريخ */
+        .hijri-select {
+          display: none !important;
+        }
+        /* إظهار النص المخصص للطباعة */
+        .print-date {
+          display: inline !important;
+        }
+        /* التأكد من أن الألوان الخلفية للمهام المهمة تظهر */
+        .important-task-dark-red {
+          background-color: #ff9999 !important;
+        }
+        .important-task-dark-purple {
+          background-color: #e6ccff !important;
+        }
+        .important-task-dark-green {
+          background-color: #99cc99 !important;
+        }
+        .important-task-dark-blue {
+          background-color: #99ccff !important;
+        }
+        .important-task-dark-brown {
+          background-color: #d9b38c !important;
+        }
+        .important-task-deep-red {
+          background-color: #e57373 !important;
+        }
+        .important-task-deep-blue {
+          background-color: #64b5f6 !important;
+        }
+        .important-task-deep-green {
+          background-color: #81c784 !important;
+        }
+        .important-task-deep-orange {
+          background-color: #ffb74d !important;
+        }
+        .important-task-deep-purple {
+          background-color: #ba68c8 !important;
         }
       }
       @media (max-width: 430px) {
@@ -189,11 +270,10 @@
           gap: 2px;
           justify-content: center;
         }
-        .time-input,
         .hijri-select,
         .color-select {
-          width: 50px;
-          font-size: 9px;
+          width: 40px !important;
+          font-size: 8px;
         }
         .table th,
         .table td {
@@ -208,7 +288,6 @@
   </head>
   <body>
     <div class="container">
-      <!-- الـ HTML كما هو -->
       <div class="text-center mt-3">
         <div class="small-text">
           <span class="editable" id="title1">السرية الأولى</span>
@@ -240,6 +319,7 @@
         <h4 class="header fs-6 editable" id="title4">
           بيان بالمهام المكلفة بها قوة المهام والواجبات الخاصة ليوم
           <span id="selected-date"></span>
+          <span id="print-selected-date" class="print-date"></span>
         </h4>
         <div class="date-controls mt-2">
           <select
@@ -423,10 +503,13 @@
                 letter-spacing: -0.5px;
               "
             >
-              <span><br />قائد قوة المهام والواجبات الخاصة</span
-              ><br style="line-height: 0" />
-              <span style="text-align: right; display: block">عقيد /</span>
-              <span>فيصل بن خالد النفيسة</span>
+              <span>
+                <div>عميد /</div>
+                <div style="padding-right: 50px">
+                  <span>قائد قوة المهام والواجبات الخاصة</span>
+                  <span style="margin-right: 2px">فيصل بن خالد النفيسة</span>
+                </div>
+              </span>
             </p>
             <button
               class="btn btn-warning btn-sm edit-btn"
@@ -609,7 +692,11 @@
         const selectedDate = `${weekDay} ${hijriDay} ${
           hijriMonths[hijriMonth - 1]
         } ${hijriYear}`;
+        const printDate = `اليوم: ${weekDay} ${hijriDay} ${
+          hijriMonths[hijriMonth - 1]
+        }، ${hijriYear} هـ`;
         document.getElementById("selected-date").innerText = selectedDate;
+        document.getElementById("print-selected-date").innerText = printDate;
         updateAllTables();
         saveTableData("mainTable1");
         saveTableData("mainTable2");
@@ -641,6 +728,9 @@
           .getElementsByTagName("tbody")[0];
         const newRow = table.insertRow();
         const rowIndex = table.rows.length;
+        const dateText = `${weekDay} ${hijriDay} ${
+          hijriMonths[hijriMonth - 1]
+        }، ${hijriYear} هـ`;
         newRow.innerHTML = `
           ${tableId === "mainTable1" ? `<td>${rowIndex}</td>` : ""}
           <td class="date-cell">
@@ -684,11 +774,12 @@
                 )
                 .join("")}
             </select>
+            <span class="print-date">${dateText}</span>
           </td>
           <td contenteditable="true">06:00</td>
-          <td contenteditable="true">-</td>
-          <td contenteditable="true">-</td>
-          <td contenteditable="true">-</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
           <td class="edit-column">
             <div class="action-buttons">
               <button class="btn btn-warning btn-sm edit-btn" onclick="editTable('${tableId}')">تعديل</button>
@@ -704,21 +795,13 @@
         updatePendingTasks();
       }
 
-      // دالة جديدة لزر "اكتمال" بدون ألوان
       function toggleComplete(button, tableId) {
         const row = button.closest("tr");
-        const startIndex = tableId === "mainTable1" ? 1 : 0;
-        const dataCells = Array.from(row.querySelectorAll("td")).slice(
-          startIndex,
-          -1
-        );
-        const isCompleted = dataCells[0].classList.contains("completed-task");
+        const isCompleted = button.innerText === "إلغاء الاكتمال";
 
         if (isCompleted) {
-          dataCells.forEach((cell) => cell.classList.remove("completed-task"));
           button.innerText = "اكتمال";
         } else {
-          dataCells.forEach((cell) => cell.classList.add("completed-task"));
           button.innerText = "إلغاء الاكتمال";
         }
 
@@ -726,7 +809,6 @@
         updatePendingTasks();
       }
 
-      // إظهار قائمة الألوان لـ "تحديد اللون" فقط
       function showColorPicker(button, tableId) {
         const row = button.closest("tr");
         const actionButtons = row.querySelector(".action-buttons");
@@ -766,7 +848,6 @@
         actionButtons.appendChild(colorPicker);
       }
 
-      // تطبيق اللون لـ "تحديد اللون" فقط
       function applyColor(select, tableId) {
         const row = select.closest("tr");
         const color = select.value;
@@ -790,7 +871,6 @@
         updatePendingTasks();
       }
 
-      // إزالة اللون
       function removeColor(button, tableId) {
         const row = button.closest("tr");
         const startIndex = tableId === "mainTable1" ? 1 : 0;
@@ -884,7 +964,8 @@
             "select[name='hijri-year']"
           ).value;
           const isCompleted =
-            cells[1 + offset].classList.contains("completed-task");
+            cells[0 + offset].parentElement.querySelector(".complete-btn")
+              .innerText === "إلغاء الاكتمال";
           const isImportant = importantColors.some((color) =>
             cells[1 + offset].classList.contains(color)
           );
@@ -892,6 +973,10 @@
             importantColors.find((color) =>
               cells[1 + offset].classList.contains(color)
             ) || "";
+          const dateText = `${weekDay} ${day} ${
+            hijriMonths[month - 1]
+          }، ${year} هـ`;
+          cells[0 + offset].querySelector(".print-date").innerText = dateText;
           data.push([
             `${weekDay} ${day} ${hijriMonths[month - 1]} ${year}`,
             cells[1 + offset].innerText,
@@ -919,6 +1004,9 @@
             const isCompleted = rowData[5];
             const isImportant = rowData[6] || false;
             const importantColor = rowData[7] || "";
+            const dateText = `${weekDay} ${day} ${
+              hijriMonths[month - 1]
+            }، ${year} هـ`;
             const row = table.insertRow();
             row.innerHTML = `
               ${tableId === "mainTable1" ? `<td>${index + 1}</td>` : ""}
@@ -963,6 +1051,7 @@
                     )
                     .join("")}
                 </select>
+                <span class="print-date">${dateText}</span>
               </td>
               <td contenteditable="false">${rowData[1]}</td>
               <td contenteditable="false">${rowData[2]}</td>
@@ -988,9 +1077,6 @@
               startIndex,
               -1
             );
-            if (isCompleted) {
-              dataCells.forEach((cell) => cell.classList.add("completed-task"));
-            }
             if (isImportant && importantColor) {
               dataCells.forEach((cell) => cell.classList.add(importantColor));
             }
@@ -1000,30 +1086,33 @@
           const defaultTasks = [
             {
               siteStartTime: "06:00",
-              type: "الاستعداد",
-              location: "-",
-              required: "-",
+              type: "",
+              location: "",
+              required: "",
             },
             {
               siteStartTime: "03:30",
-              type: "الاستعداد",
-              location: "-",
-              required: "-",
+              type: "",
+              location: "",
+              required: "",
             },
             {
               siteStartTime: "13:30",
-              type: "الاستعداد",
-              location: "-",
-              required: "-",
+              type: "",
+              location: "",
+              required: "",
             },
             {
               siteStartTime: "14:00",
-              type: "الاستعداد",
-              location: "-",
-              required: "-",
+              type: "",
+              location: "",
+              required: "",
             },
           ];
           defaultTasks.forEach((task, index) => {
+            const dateText = `${weekDay} ${hijriDay} ${
+              hijriMonths[hijriMonth - 1]
+            }، ${hijriYear} هـ`;
             const row = table.insertRow();
             row.innerHTML = `
               ${tableId === "mainTable1" ? `<td>${index + 1}</td>` : ""}
@@ -1068,6 +1157,7 @@
                     )
                     .join("")}
                 </select>
+                <span class="print-date">${dateText}</span>
               </td>
               <td contenteditable="true">${task.siteStartTime}</td>
               <td contenteditable="true">${task.type}</td>
@@ -1098,6 +1188,21 @@
           for (let row of rows) {
             const offset = tableId === "mainTable1" ? 1 : 0;
             const dateCell = row.cells[0 + offset];
+            const weekDay = dateCell.querySelector(
+              "select[name='week-day']"
+            ).value;
+            const day = dateCell.querySelector(
+              "select[name='hijri-day']"
+            ).value;
+            const month = dateCell.querySelector(
+              "select[name='hijri-month']"
+            ).value;
+            const year = dateCell.querySelector(
+              "select[name='hijri-year']"
+            ).value;
+            const dateText = `${weekDay} ${day} ${
+              hijriMonths[month - 1]
+            }، ${year} هـ`;
             dateCell.innerHTML = `
               <select class="hijri-select" name="week-day">
                 ${weekDays
@@ -1114,7 +1219,7 @@
                   .map(
                     (day) =>
                       `<option value="${day}" ${
-                        day === hijriDay ? "selected" : ""
+                        day === parseInt(day) ? "selected" : ""
                       }>${day}</option>`
                   )
                   .join("")}
@@ -1124,7 +1229,7 @@
                   .map(
                     (m, i) =>
                       `<option value="${i + 1}" ${
-                        i + 1 === hijriMonth ? "selected" : ""
+                        i + 1 === parseInt(month) ? "selected" : ""
                       }>${m}</option>`
                   )
                   .join("")}
@@ -1134,11 +1239,12 @@
                   .map(
                     (year) =>
                       `<option value="${year}" ${
-                        year === hijriYear ? "selected" : ""
+                        year === parseInt(year) ? "selected" : ""
                       }>${year}</option>`
                   )
                   .join("")}
               </select>
+              <span class="print-date">${dateText}</span>
             `;
           }
         });
@@ -1152,7 +1258,6 @@
           );
           tableData.forEach((task) => {
             if (!task[5]) {
-              // إذا المهمة مش مكتملة
               pendingTasks.push(task);
             }
           });
