Adjust font sizes in index.html for improved readability

--- a/index.html
+++ b/index.html
@@ -420,13 +420,13 @@
         </div>
       </div>
 
-      <div class="introduction mt-5">
-        <p class="fs-6 text-center">
+      <div class="introduction mt-5" style="font-size: 8px">
+        <p class="text-center" style="font-size: 8px">
           <span style="display: block">ص/ ضباط خفر</span>
           <span style="display: block">ص/ رقباء السرايا</span>
           <span style="display: block">ص/ العمليات</span>
         </p>
-        <p class="fs-6 text-end">
+        <p class="text-end" style="font-size: 8px">
           السلام عليكم ورحمة الله وبركاته، تجدون أعلاه بيان بالمهام الأسبوعية
           المراد تغطيتها أمنياً من قبلكم، بالإضافة للمهام الطارئة، لذا عليكم
           متابعة تغطيتها بالوقت المحدد دون أي ملاحظات، مع التنبيه على العموم
@@ -436,7 +436,7 @@
       </div>
 
       <div class="notes mt-5">
-        <h5 class="fs-6 editable" id="notesTitle">
+        <h5 class="editable" id="notesTitle" style="font-size: 6px">
           ملاحظات هامة جدا يجب الاطلاع عليها والتقيد بها حرفياً أثناء الاستلام:
         </h5>
         <button
@@ -445,7 +445,7 @@
         >
           تعديل
         </button>
-        <ul style="font-size: 12px">
+        <ul style="font-size: 8px">
           <li>حراسة البوابة الرسمية.</li>
           <li>مهام طارئة تصل بشكل مفاجئ يجب الاستعداد لها.</li>
           <li>
